--- a/style.css
+++ b/style.css
@@ -8,10 +8,7 @@
     list-style: none;
 
 }
-{
-    font-size: 100%
 
-}
 
 .cabecalho{
     display:flex;
@@ -328,9 +325,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 780px;
+    margin-left: 850px;
     position: relative;
     margin-top: -165.5px;
     border-radius: 10px;
+    width: 200px;
 }
 
