--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 }
 
 .menu{
-    gap: 8px;
+    gap: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -40,7 +40,7 @@
 }
 
 .menu1:hover{
-    background-color: #e90b0b;
+    background-color: #837e7e;
     color: #ffffff;
     border-radius: 4px;
     width: 80px;
@@ -108,11 +108,13 @@
     color: #111111;
     background-color: antiquewhite;
     margin-left: 200px;
+    font-weight: 550;
+    font-size: 13px;
 }
 
 .conteudo-principal-3:hover{
-    background-color: #e90b0b;
-    color:#ffffff;
+    background-color: #837e7e;
+   
 }
 
 .cabecalho-imagem{
@@ -296,7 +298,7 @@
 }
 
 .rede-sociais .fa-whatsapp:hover{
-    color:#64e90b;
+    color:#34af23;
     transform: translateY(-9px);
 }
 
